# spherify

./: .gitignore  README.md  setup.cfg  spherify.jl  spherify.py
src/spherify/: __main__.py  cli.py  spherify.jl  spherify.py
