[metadata]
name = spherify
version = 0.0.1
author = Daniil F.
author_email = mail@placeholder123.to
description = Project an image onto a sphere
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/daniil-berg/spherify
project_urls =
    Bug Tracker = https://github.com/daniil-berg/spherify/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = Pillow

[options.packages.find]
where = src

[options.package_data]
spherify = spherify.jl
